@@ -1,6 +1,6 @@
 SUBDIRS			= datahandler
-CLEANFILES		= __init__.py
-BUILT_SOURCES		= __init__.py
+CLEANFILES		= config.py
+BUILT_SOURCES		= config.py
 
 
 librevelationdir	= $(pythondir)/revelation
@@ -16,12 +16,12 @@ librevelation_PYTHON	= \
 	widget.py
 
 
-__init__.py: Makefile __init__.py.in
+config.py: Makefile config.py.in
 	sed \
 		-e "s|\@GCONFTOOL\@|$(GCONFTOOL)|" \
 		-e "s|\@VERSION\@|$(VERSION)|" \
 		-e "s|\@datadir\@|$(datadir)|" \
 		-e "s|\@pkgdatadir\@|$(pkgdatadir)|" \
 		-e "s|\@pkgschemadir\@|@GCONF_SCHEMA_FILE_DIR@|" \
-		__init__.py.in > __init__.py
+		config.py.in > config.py
 
